Update Home component with LinkedIn link and enhance icon hover effects

--- a/vite-project/src/styles/Home.css
+++ b/vite-project/src/styles/Home.css
@@ -78,6 +78,11 @@
     border-radius:100%
 }
 
+.home__icons a:hover {
+    background-color: #8793ff;
+    transform: scale(1.2);
+}
+
 .home__image img {
     width: 400px;
     height: 400px;
